examples/test_package/Double_dc_only_report_tool/steps/pl___aircr_rough_run1/#test_analysis_1_result.txt
### Code Evaluation Report: Aircraft Flap Controller in ProbLog

---

#### **1. Document Title**  
**Evaluation of Aircraft Flap Controller ProbLog Code**

---

#### **2. Background and Purpose**  
The provided code models an aircraft flap controller inspired by Filieri et al.'s work. It simulates the movement of flaps under the influence of actuators and wind effects, aiming to reach a target position. The evaluation focuses on verifying the correctness of the ProbLog implementation, analyzing test results, and identifying potential issues.

---

#### **3. Test Results Summary**  
The test results indicate a failure with the following error:  
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 33:208.
```

**Failed Queries:**  
- The error occurs during the evaluation of the `attempted_flap_position` predicate, specifically at line 33.  
- No probability results or successful queries are reported due to the failure.

---

#### **4. Failure Localization**  
- **Failed Predicate:** `attempted_flap_position/2`  
- **Code Line:** 33  
- **Issue:** The error suggests a missing or malformed clause for the `->/2` operator, which is used in the conditional logic of the `attempted_flap_position` rule.  
- **Expected Behavior:** The rule should calculate the new flap position based on the actuator strength, wind effect, and target position.  

---

#### **5. Root Cause Analysis**  
- **Logical Correctness:**  
  - The rule `attempted_flap_position` uses conditional logic (`Delta > 0 -> Direction = 1 ; Direction = -1`), but the ProbLog engine fails to recognize the `->/2` operator.  
  - ProbLog does not natively support the `->/2` operator in this context.  

- **Probabilistic Rules:**  
  - The probabilistic facts (e.g., `wind_effect`, `use_actuator`) are correctly defined, but the error prevents their evaluation.  
  - The negation (`\+ goal_reached(Prev)`) is syntactically correct but not evaluated due to the failure.  

- **DeepProbLog:**  
  - No DeepProbLog features (e.g., `nn/3`, `tensor/…`) are used in the code.  

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** Partially met, but the `->/2` operator issue prevents full evaluation.  
  - **Probabilistic Reasoning:** Correctly defined but not executed due to the error.  
  - **Neural Network Integration:** Not applicable (DeepProbLog not used).  

- **Edge Cases:**  
  - The `legal_flap_position` predicate ensures positions are within bounds, but the error prevents testing edge cases (e.g., overrun exceptions).  
  - Recursive termination is not verified due to the failure.  

---

#### **7. Error Summary**  

| No. | Problem                          | Impact                          | Suggestion                          |
|-----|----------------------------------|---------------------------------|-------------------------------------|
| 1   | `->/2` operator not recognized   | Prevents evaluation of the rule | Replace `->/2` with `if-then-else`  |
| 2   | Missing clause for `->/2`        | Halts execution                | Rewrite the conditional logic       |

---

#### **8. Conclusion**  
The code fails due to the unsupported `->/2` operator in ProbLog. Rewriting the conditional logic using `if-then-else` or equivalent ProbLog constructs is recommended. Once fixed, the probabilistic and classical reasoning aspects should function as intended.  

**Word Count:** 450  

--- 

Let me know if you'd like further refinements or additional details!